background and logo update

--- a/src/sass/components/_vars.scss
+++ b/src/sass/components/_vars.scss
@@ -28,3 +28,4 @@ $background-opacity: 0.8;
 $home-image: url(../images/success-bkg-min.jpg);
 $about-image: url(../images/about-underconstruction-min.jpg);
 $contact-image: url(../images/contact-bg-min.jpg);
+$work-image: url(../images/bg-min.jpg);
