--- a/src/sass/components/_mixins.scss
+++ b/src/sass/components/_mixins.scss
@@ -38,6 +38,47 @@
   }
 }
 
+@mixin easeOut {
+  transition: all 0.8s ease-out;
+}
+
+@mixin hover-border {
+  cursor: pointer;
+  position: relative;
+  z-index: -88;
+  &:after,
+  &:before {
+    content: " ";
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    border: 0px solid;
+    transition: all 1s;
+  }
+  &:after {
+    top: -1px;
+    left: -1px;
+    border-top: 5px solid $secondary_clr;
+    border-left: 5px solid $secondary_clr;
+  }
+  &:before {
+    bottom: -1px;
+    right: -1px;
+    border-bottom: 5px solid $secondary_clr;
+    border-right: 5px solid $secondary_clr;
+  }
+  &:hover {
+    @include easeOut;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    &:before,
+    &:after {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
 @mixin background($image) {
   @if $show-image {
     background: #{$image};
@@ -47,7 +88,7 @@
 
     &:before {
       content: "";
-      position: absolute;
+      position: fixed;
       top: 0;
       right: 0;
       width: 100%;
