--- a/src/sass/components/_vars.scss
+++ b/src/sass/components/_vars.scss
@@ -11,13 +11,13 @@ $secondary_font: "Gilroy", cursive;
   src: url("../fonts/Gilroy-ExtraBold.otf");
 }
 
-$blue_gray: #253746;
+$pickled_bluewood: #253746;
 $jungle_green: #27a096;
 $eminence: #6e2880;
 $fire-bush: #df9034;
 $san-felix: #216a0c;
 
-$primary_clr: $blue_gray;
+$primary_clr: $pickled_bluewood;
 $secondary_clr: $jungle_green;
 $tertiary_clr: $eminence;
 $h_clr: $fire-bush;
