--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -15,10 +15,10 @@ footer {
 		display: flex;
 		align-items: center;
 		@include media-max-width(800) {
-			display: block;
+			flex-direction: column;
 			margin-bottom: 25px;
 
-			p {
+			h4 {
 				margin-bottom: 25px;
 			}
 		}
@@ -27,15 +27,26 @@ footer {
 			margin-right: 15px;
 		}
 
+		&__container {
+			display: flex;
+			justify-content: space-around;
+			width: 200px;
+			max-width: 100%;
+		}
+
 		.icon {
 			padding: 5px;
 			background: $secondary_clr;
 			color: $primary_clr;
 			border-radius: 5px;
-			font-size: 25px;
 			&:hover {
 				color: $h_clr;
 				background: $primary_clr;
+			}
+
+			.svg {
+				width: 25px;
+				max-width: 100%;
 			}
 		}
 	}
