--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,5 +1,5 @@
 html {
-	font-family: $mainFont, $secondaryFont, Verdana, Geneva, Tahoma, sans-serif;
+	font-family: $secondaryFont, $mainFont, Verdana, Geneva, Tahoma, sans-serif;
 }
 
 @font-face {
