few small fixes

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -7,7 +7,7 @@
 	padding: 15px 45px;
 	font-size: 13px;
 	text-transform: uppercase;
-	font-weight: 600;
+	font-weight: $fwBold;
 	letter-spacing: 3px;
 	border-radius: 2px;
 	text-align: center;
