--- a/src/scss/pages/_contact.scss
+++ b/src/scss/pages/_contact.scss
@@ -67,7 +67,7 @@
 		padding-bottom: 10px;
 		transition: all 0.3s;
 		margin-top: -4px;
-		font-weight: 700;
+		font-weight: $fwBold;
 		border: 1px solid $secondary_clr;
 	}
 	[type='submit']:hover {
@@ -163,7 +163,7 @@
 		small {
 			visibility: visible;
 			color: $secondary_clr;
-			font-weight: 900;
+			font-weight: $fwBold;
 			background-color: $primary_clr;
 			padding: 5px;
 			border-radius: 5px;
@@ -190,12 +190,12 @@
 		outline: none;
 
 		padding: 10px;
-		font-family: $mainFont;
+		font-family: $secondaryFont;
 		width: 100%;
 
 		&::placeholder {
 			font-style: italic;
-			font-weight: 900;
+			font-weight: $fwBold;
 		}
 
 		&:active,
