--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,6 +1,7 @@
 footer {
 	background-color: $primary_clr;
 	display: flex;
+	margin-top: auto;
 	justify-content: space-between;
 	padding: 10px 50px;
 	color: #fff;
