--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -30,7 +30,8 @@ footer {
 
 		&__container {
 			display: flex;
-			justify-content: space-around;
+			justify-content: center;
+			gap: 20px;
 			width: 200px;
 			max-width: 100%;
 		}
@@ -52,7 +53,7 @@ footer {
 		}
 	}
 	.copyright {
-		font-size: 10px;
+		font-size: 14px;
 
 		&__author {
 			color: $secondary_clr;
